packages/uow-core/main/default/objects/UoWLimitsThreshold__mdt/UoWLimitsThreshold__mdt.object-meta.xml
<CustomObject>
    <description>Defines amber (warning) and red (danger) thresholds for governor limit visualization in audit records. Each record represents a limit type (DmlRows, CpuTime, etc.) with configurable thresholds for both transaction-level and work-item-level formulas.</description>
    <label>UoW Limits Threshold</label>
    <pluralLabel>UoW Limits Thresholds</pluralLabel>
</CustomObject>