packages/uow-core/main/default/objects/UoWLimitsThreshold__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this limit type and what the thresholds represent.</description>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>