packages/uow-core/main/default/objects/UoWLimitsThreshold__mdt/fields/TransactionAmberPercent__c.field-meta.xml
<CustomField>
    <fullName>TransactionAmberPercent__c</fullName>
    <defaultValue>80</defaultValue>
    <description>Warning threshold percentage for transaction-level limit consumption (vs platform maximum). Default: 80%</description>
    <label>Transaction Amber %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>