packages/uow-core/main/default/objects/UoWLimitsThreshold__mdt/fields/TransactionRedPercent__c.field-meta.xml
<CustomField>
    <fullName>TransactionRedPercent__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Danger threshold percentage for transaction-level limit consumption (vs platform maximum). Default: 90%</description>
    <label>Transaction Red %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>