packages/uow-core/main/default/objects/UoWLimitsThreshold__mdt/fields/WorkItemAmberPercent__c.field-meta.xml
<CustomField>
    <fullName>WorkItemAmberPercent__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Warning threshold percentage for work-item contribution to transaction total. Identifies resource-heavy work items. Default: 30%</description>
    <label>Work Item Amber %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>