packages/uow-core/main/default/objects/UoWLimitsThreshold__mdt/fields/WorkItemRedPercent__c.field-meta.xml
<CustomField>
    <fullName>WorkItemRedPercent__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Danger threshold percentage for work-item contribution to transaction total. Identifies resource-heavy work items. Default: 50%</description>
    <label>Work Item Red %</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>