packages/uow-core/main/default/objects/UoWLimitsThreshold__mdt/listViews/AllThresholds.listView-meta.xml
<ListView>
    <fullName>AllThresholds</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>TransactionAmberPercent__c</columns>
    <columns>TransactionRedPercent__c</columns>
    <columns>WorkItemAmberPercent__c</columns>
    <columns>WorkItemRedPercent__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Thresholds</label>
</ListView>